--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="color_939393">#939393</color>
     <color name="color_7C7C7C">#7C7C7C</color>
     <color name="color_B9E6FF">#B9E6FF</color>
+    <color name="color_a0a0a0">#a0a0a0</color>
 </resources>
