edittext 포커스 ui 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="color_424242">#424242</color>
     <color name="color_1A2334">#1A2334</color>
     <color name="color_313948">#313948</color>
+    <color name="color_3687FF8">#3687FF</color>
     <color name="color_1873FC">#1873FC</color>
     <color name="color_717171">#717171</color>
     <color name="color_2556A2">#2556A2</color>
